--- a/Api/package.json
+++ b/Api/package.json
@@ -5,5 +5,9 @@
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.15",
     "xlsx": "^0.18.5"
+  },
+  "scripts": {
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   }
 }
