--- a/Api/package.json
+++ b/Api/package.json
@@ -3,7 +3,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "express-fileupload": "^1.3.1",
     "filereader": "^0.10.3",
+    "multer": "^1.4.4",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.15",
     "xlsx": "^0.18.5"
