--- a/Api/package.json
+++ b/Api/package.json
@@ -1,10 +1,12 @@
 {
   "dependencies": {
+    "argon2": "^0.28.5",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-fileupload": "^1.3.1",
     "filereader": "^0.10.3",
+    "joi": "^17.6.0",
     "multer": "^1.4.4",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.15",
@@ -13,5 +15,10 @@
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js"
+  },
+  "devDependencies": {
+    "eslint": "^8.13.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0"
   }
 }
