--- a/Api/package.json
+++ b/Api/package.json
@@ -7,6 +7,7 @@
     "express-fileupload": "^1.3.1",
     "filereader": "^0.10.3",
     "joi": "^17.6.0",
+    "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.4",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.15",
