--- a/suderereact/package.json
+++ b/suderereact/package.json
@@ -7,10 +7,12 @@
     "@testing-library/react": "^13.0.1",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
+    "chart.js": "^3.7.1",
     "cookie": "^0.5.0",
-    "js-cookie": "^3.0.1",
     "date-fns": "^2.28.0",
+    "js-cookie": "^3.0.1",
     "react": "^18.0.0",
+    "react-chartjs-2": "^4.1.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
