--- a/suderereact/package.json
+++ b/suderereact/package.json
@@ -15,6 +15,7 @@
     "react-chartjs-2": "^4.1.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.0.0",
+    "react-multi-select-component": "^4.2.5",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "sass": "^1.51.0",
