--- a/Api/package.json
+++ b/Api/package.json
@@ -9,6 +9,7 @@
     "filereader": "^0.10.3",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^3.1.2",
     "multer": "^1.4.4",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.15",
