--- a/suderereact/package.json
+++ b/suderereact/package.json
@@ -8,9 +8,11 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "chart.js": "^3.7.1",
+    "classnames": "^2.3.1",
     "cookie": "^0.5.0",
     "date-fns": "^2.28.0",
     "js-cookie": "^3.0.1",
+    "prop-types": "^15.8.1",
     "react": "^18.0.0",
     "react-chartjs-2": "^4.1.0",
     "react-cookie": "^4.1.1",
